cgt-macros/tests/trybuild/failures/cgt_test_fd_derive.rs
fn main () {
    cgt_macros::cgt_test_with_fd!();
}